--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.44.1
-pandas==1.5.3
-numpy==1.23.0
-scikit-learn==1.0.2
-joblib==1.2.0
-matplotlib==3.5.0
-seaborn==0.11.2
+pandas
+scikit-learn
+joblib
+matplotlib
+seaborn
 distutils
